# convex-typegen

./: .gitignore  .mcp.json  Cargo.toml  README.md  readme.md
.github/workflows/: ci.yml
examples/basic/: Cargo.toml  build.rs  package-lock.json
examples/basic/convex/: games.ts  players.ts  schema.ts
examples/basic/convex/_generated/: api.d.ts
examples/basic/src/: lib.rs  main.rs
js/: extractor.ts  package.json  plugin.ts
js/mocks/: convex_api.ts  convex_server.ts  convex_values.ts  normalize.ts
src/: bun_installer.rs  codegen.rs  convex.rs  errors.rs  extract.rs  lib.rs  types.rs
tests/: codegen_tests.rs  config_test.rs  crm_schema_test.rs  function_tests.rs  integration_test.rs  schema_tests.rs
tests/common/: container.rs  deploy.rs  helpers.rs  mod.rs
