[package]
name = "convex-typegen"
version = "0.2.0"
description = "Type safe bindings for ConvexDB in Rust"
authors = ["Jamal Lyons"]
license = "MIT"
edition = "2021"

# Documentation and repository links
repository = "https://github.com/nickcomua/convex-typegen"
homepage = "https://github.com/nickcomua/convex-typegen"
readme = "README.md"

# Metadata
categories = ["development-tools", "database", "web-programming"]
keywords = ["convex", "rust", "typegen", "database", "types"]

# Rust version requirement
# rust-version = "1.70.0"

[dependencies]
convex = "0.10"
serde = { version = "1", features = ["std", "derive"], default-features = false }
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
zip = "8.0"
flate2 = "1.0"
tar = "0.4"

[dev-dependencies]
tempdir = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
testcontainers = "0.27"
futures = "0.3"
futures-core = "0.3"
basic = { path = "examples/basic" }

[profile.dev]
opt-level = 1      # Make debug builds run faster
panic = "abort"    # Better optimizations and smaller binaries
debug = true       # Keep debug symbols for development

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3      # Maximum optimization
lto = "thin"       # Enable link-time optimization
codegen-units = 1  # Maximize performance
panic = "abort"    # Better optimizations and smaller binaries
strip = true       # Remove debug symbols from the binary
