[package]
name = "basic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
convex = "0.10.2"
futures = "0.3"
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[build-dependencies]
convex-typegen = { path = "../../" }
